<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/reg"
    android:background="@color/black"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/main_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp_title"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logIn_username"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtUsername"
                android:inputType="text"
                android:hint="@string/hint_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logIn_password"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtPassword"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_password" />
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtReenterPassword"
                android:hint="@string/hint_reenterPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtFirstName"
                android:hint="@string/hint_firstName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtLastName"
                android:hint="@string/hint_lastName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtEmail"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"/>
            <EditText
                style="@style/hints_style"
                android:id="@+id/txtNumber"
                android:hint="@string/hint_phoneNumber"
                android:inputType="phone|number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                style="@style/form_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GENDER"/>

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"/>

        <Button
            android:id="@+id/btnRegister"
            style="@style/main_button"
            android:text="REGISTER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>